        -Fire Creeoer: Explodes in a ball of fire, sets all entities and the ground around it on fire (Not fully implemented)
        
1.2 CHANGELOG
    -Fixed recipes for all multi-tools
    -Added new tool materials for advanced tools
    -Added armor for all of the gems
    -Added advanced armors
        -Strength armor- full set provides strength and resistance
        -Speed armor - full set provides speed, jump boost, and step assist
        -Fire armor - full set provides fire resistance
        -Health armor - full set provides regeneration
    -Fully Implemented the fire and healing creepers (Healing Creeper works but there are currently not particle effects that show that)
    

1.3 CHANGELOG
    -Fixed the effects on the healing axe
    -Added Energy Cores (Rare drops from the respective creeper)
    -Added Energy Core Fragments
    _Added dust and small piles of dust for each gem
    -Added Active Energy Cores
    -Added Basic Collector - Collects gem particles out of this air
    -Added a Capacitor Multiblock made out of the following components:
        -Capacitor Controller
        -Capacitor Wall
        -Capacitor Glass
        -Speed Capacitor
        -Fire Capacitor
        -Health Capacitor
        -Strength Capacitor
    -Added Basic Generator
    -Added Speed Generator
    -Added Fire Generator
    -Added Health Generator
    -Added Strength Generator
    -Added Speed Collector
    -Added Strength Collector
    -Added Cleaner
    -Added Basic Extractor
    -Added Speed Extractor
    -Added Strength Extractor
    -Added Fire Extractor
    
1.3.1 CHANGELOG
    -Fixed Item names not appearing in guis
    -Fixed special axe recipes being inconsistent
    -Added a new collector gui
    -Added Opal Generator
    -Added Topaz Generator
    -Added Ruby Generator
    -Added Sapphire Generator
    -Added Linking Tool
    
1.4 CHANGELOG
    -Added experience to special tools
    -Added a skill points gui for the tools