@@ -16,6 +16,9 @@ public class GeneratorGui extends GuiContainer{
     public GeneratorTileEntity tileEntity = new GeneratorTileEntity();
 
     private static final ResourceLocation background = new ResourceLocation(ElementalMastery.MODID, "textures/gui/generatoropal.png");
+    
+    public static final int progressBarLength = 0;
+    public static final int energyBarLength = 0;
 
     public GeneratorGui(GeneratorTileEntity tileEntity, GeneratorContainer container) {
         super(container);
@@ -29,6 +32,11 @@ public class GeneratorGui extends GuiContainer{
     	GlStateManager.color(1.0F, 1.0F, 1.0F, 1.0F);
         mc.getTextureManager().bindTexture(background);
         drawTexturedModalRect(guiLeft, guiTop, 0, 0, xSize, ySize);
+        
+        if(tileEntity.getCurrentProgress() > 0) {
+        	int scaledProgress = (tileEntity.getCurrentProgress() / tileEntity.getMaxProgress()) * progressBarLength;
+        	drawTexturedModalRect(81, 35, 176, 0, scaledProgress, 16);
+        }
     }
     
     @Override
