@@ -51,6 +51,7 @@
 1.3.1 CHANGELOG
     -Fixed Item names not appearing in guis
     -Fixed special axe recipes being inconsistent
+    -Fixed Items not dropping when the collector was broken
     -Added a new collector gui
     -Added Opal Generator
     -Added Topaz Generator
